# PPIDM-Pi

./: README.md  pyproject.toml
ppidm_pi/: __init__.py  classifier.py  data.py  diffusion.py  metrics.py  physics.py  unet.py
tests/: conftest.py  test_classifier.py  test_diffusion.py  test_metrics.py  test_physics.py  test_unet.py
